swagger oferta , persona
