# api/openapi.yml
@@ -367,6 +367,212 @@ paths:
       tags:
         - Deuda
 
+  /api/data/oferta:
+    post:
+      summary: Crea una nueva oferta
+      description: Registra una oferta para un cliente por RUT
+      x-eov-operation-handler: ofertas
+      operationId: crearOferta
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Oferta"
+      responses:
+        "201":
+          description: Oferta creada correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  msg:
+                    type: string
+                    example: oferta guardado correctamente
+        "400":
+          description: Error en los datos enviados
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error interno
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Oferta
+
+  /api/data/ofertaRut:
+    get:
+      description: Obtiene las deudas asociadas a un RUT
+      x-eov-operation-handler: ofertas
+      operationId: obtenerOfertaRut
+      parameters:
+        - in: query
+          name: rut
+          schema:
+            type: string
+          required: true
+          description: RUT del cliente para buscar oferta
+      responses:
+        "200":
+          description: Oferta encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Oferta"
+        "404":
+          description: Oferta no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error interno
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Oferta
+
+  /api/data/ofertasClientes:
+    get:
+      description: Obtiene todas las deudas de todos los clientes
+      x-eov-operation-handler: ofertas
+      operationId: obtenerOfertas
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  deuda:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Oferta'
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorGenerico'
+      tags:
+        - Oferta
+
+  /api/data/persona:
+    post:
+      summary: Crea una persona
+      description: Registra una nueva persona con su información básica
+      x-eov-operation-handler: persona
+      operationId: crearPersona
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Persona"
+      responses:
+        "201":
+          description: Persona creada correctamente
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  ok:
+                    type: boolean
+                    example: true
+                  msg:
+                    type: string
+                    example: Datos persona guardados correctamente
+        "400":
+          description: Datos inválidos
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error al crear persona
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Persona
+
+
+  /api/data/personRut:
+    get:
+      description: Obtiene las deudas asociadas a un RUT
+      x-eov-operation-handler: persona
+      operationId: obtenerPersonaRut
+      parameters:
+        - in: query
+          name: rut
+          schema:
+            type: string
+          required: true
+          description: RUT del cliente para buscar oferta
+      responses:
+        "200":
+          description: Oferta encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Persona"
+        "404":
+          description: Oferta no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error interno
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Persona
+
+  /api/data/listaPersonas:
+    get:
+      description: Obtiene las deudas asociadas a un RUT
+      x-eov-operation-handler: persona
+      operationId: obtenerPersona
+      responses:
+        "200":
+          description: Oferta encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Persona"
+        "404":
+          description: Oferta no encontrada
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+        "500":
+          description: Error interno
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorGenerico"
+      tags:
+        - Persona
 
     
 components:
@@ -513,6 +719,47 @@ components:
           items:
             $ref: "#/components/schemas/Deuda"
 
+    Oferta:
+      type: object
+      required:
+        - rut
+        - montoClp
+        - montoUsd
+      properties:
+        rut:
+          type: string
+          example: "123456789"
+        montoClp:
+          type: number
+          example: 1500000
+        montoUsd:
+          type: number
+          example: 1800
+
+    Persona:
+      type: object
+      required:
+        - rut
+        - nombreCompleto
+        - apellidoPaterno
+        - apellidoMaterno
+        - nombres
+      properties:
+        rut:
+          type: string
+          example: "123456789"
+        nombreCompleto:
+          type: string
+          example: "Juan Carlos Pérez Soto"
+        apellidoPaterno:
+          type: string
+          example: "Pérez"
+        apellidoMaterno:
+          type: string
+          example: "Soto"
+        nombres:
+          type: string
+          example: "Juan Carlos"
 
     ErrorGenerico:
       type: object
