# routes/ofertas.js
@@ -1,7 +1,0 @@
-const { Router } = require("express");
-const { crearOferta } = require("../controllers/ofertas");
-const router = Router();
-
-router.post("/crearOferta", crearOferta);
-
-module.exports = router;
